# adventofcode

./: .gitignore  README.md  go.mod
1/: .ans.go.swp  ans.go  input.txt
10/: ans.go
11/: ans.go
12/: ans.go
13/: 2  ans.go
14/: ans.go
15/: ans.go
16/: ans.go
17/: ans.go
18/: ans.go
19/: ans.go
2/: ans.go
22/: ans.go
3/: ans.go
4/: ans.go
5/: ans.go
6/: ans.go
7/: ans.go
8/: ans.go
9/: ans.go
intcode/: comp.go  config.go
rust-util/: Cargo.toml
rust-util-macro/: Cargo.toml
rust-util-macro/src/: lib.rs
util/: fileReader.go
y2015/: Cargo.toml  (+1 more)
y2020/: Cargo.toml
y2020/d1/: Cargo.toml
y2020/d1/src/: main.rs  util.rs
y2020/input/: d13
y2020/src/: day.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  util.rs
y2020/src/solutions/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs  template.rs
y2023/: Cargo.toml
y2023/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  tokens.rs
y2025/: Cargo.toml  out.asm
y2025/src/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
(+119 files in other folders)
