[package]
name = "rust-util-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.7.0"
syn = { version = "1.0", features = ["derive", "parsing", "proc-macro"] }
