[package]
name = "y2020"
version = "0.1.0"
authors = ["dfontana <dyfontana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = {version = "0.10.9", features = ["blocking", "gzip", "cookies"] }
