[package]
name = "y2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
dotenv = "0.15.0"
itertools = "0.10.1"
regex = "1.5.4"
rust-util = {path = "../rust-util"}
rust-util-macro = {path = "../rust-util-macro"}
serde_json = "1.0"
