[package]
name = "y2025"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.25.0"
dotenv = "0.15.0"
itertools = "0.13.0"
rust-util = {path = "../rust-util"}
rust-util-macro = {path = "../rust-util-macro"}
serde_json = "1.0"
test-case = "3.3.1"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tracing-test = "0.2.4"
